
0.9.3.dev
----------------------------

server:

- fixed issue9: caching of packages where upstream provides no
  last-modified header now works.

0.9.2 (compared to 0.9.1)
----------------------------

server:

- fix /USER/INDEXNAME root views to contain only latest in-stage packages

- make +api calls return bases so that "devpi use" can show them

client:

- introduce "devpi upload --fromdir" for uploading archives in bulk
  mode, thanks to Anthon van der Neut for helping with this!  (resolved issue5)

- improve automatic server handling via "devpi use"

- for "devpi server" you now need to specify "--log" to see log lines

- make "devpi use" also show base indexes by default

- fix issue4: auto-server data stored in non-dot dir


0.9.1 (compared to 0.9.0)
----------------------------

server:

- return 404 for submits to root/pypi

- properly sorted release file links on stage indexes

- "push" method on indexes for transfering release files to another
  pypi index

- properly handle urls from indexes with ~ and other special chars

- fix root/pypi and root/dev page serving in various cases

client:

- refined "python setup.py" calls from ``devpi upload`` with proper
  ``__file__`` attributes.  Thanks Andi Albrecht.

- implemented new "devpi push" command for pushing out releases

- improved error handling for devpi upload

- fix logoff if not logged in

- don't use --force-reinstall when using pip